# awesome-chain

./: .gitignore  CLAUDE.md  Entering  README.md  awesome.bat  build_demo.py  cli.py  generate_struct_docs.sh  main.py  pyproject.toml  requirements.txt  run.py
common/: ai_base.py  const.py  env_tools.py  muti_process.py  table_util.py  utils.py
config/: settings.py
data/AssetStructs/: AcPolicy.md  Account.md  AccountPasswordPolicy.md  Cdn.md  Cen.md  ContainerImage.md  Crt.md  Db.md  Ebs.md  Ecr.md  Ecs.md  Eip.md  Eni.md  Firewall.md  IPsec.md  Image.md  ImageRepository.md  LaunchTemplates.md  LoadBalance.md  Mfa.md  Mq.md  NatFirewall.md  NatGateway.md  NatGateway2.md  OssBucket.md  Project_.md  Role.md  RouteTable.md  Sas.md  SecurityGroup.md  Snapshot.md  StorageAccount.md  Subnet.md  Vpc.md  VpcPeer.md  VpnGateway.md  Waf.md  Zone_.md
data/samples/: data.json  example.txt
data/scripts/check_storage_account/: check_storage_account_shared_key.py  readme.md
examples/: basic_agent.py  custom_tools.py  skill_usage.py
scripts/: TEST_README.md  demo_cspm.py  run_cspm_file.sh
scripts/azure/: azure_mfa_check.py
src/awesome_chain/: __init__.py
src/awesome_chain/core/: __init__.py  agent.py  skill_manager.py  tool_registry.py
src/awesome_chain/prompt/: util.py
src/awesome_chain/skills/: __init__.py
src/awesome_chain/skills/examples/: __init__.py  code_review.py  data_analysis.py
src/awesome_chain/tools/: __init__.py  base_tools.py  file_tools.py  web_tools.py
tests/: __init__.py  test_agent.py  test_tool_registry.py
(+7 files in other folders)
